--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="app_name">TripTracker</string>
     <string name="email_hint">Email</string>
     <string name="login_button_label">LOG IN</string>
-    <string name="sign_up_text">Sign up!</string>
+    <string name="sign_up_text">No account? Click here to sign up.</string>
     <string name="password_hint">Password</string>
+    <string name="name_hint">Name</string>
+    <string name="sign_up_label">Sign me up!</string>
 </resources>
