--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,38 @@
     <string name="sign_up_label">Sign me up!</string>
     <string name="authentication_error_title">User Authentication Error!</string>
     <string name="empty_field_signup_error">Be sure you have entered a valid email address, password, and name.</string>
+    <!-- 3.1.3 fragment_trip_list -->
+    <string name="trip_list_text">Trip List</string>
+
+    <!-- 3.1.3 fragment_trip -->
+    <string name="trip_details_text">Trip Details</string>
+    <string name="trip_name_label">Name</string>
+    <string name="trip_name_hint">Please enter a name for your
+    trip.</string>
+    <string name="trip_details_label">Details</string>
+    <string name="trip_desc_hint">Please enter a description for your trip.</string>
+    <string name="start_date_label">Start Date</string>
+    <string name="end_date_label">End Date</string>
+    <string name="start_date_hint">Select a Start Date:</string>
+    <string name="end_date_hint">Select an End Date:</string>
+    <string name="trip_public_label">Shared/Public?</string>
+<string name="trip_error_message">Please make sure to enter a trip
+name!</string>
+    <string name="trip_error_title">Error!</string>
+    <string name="delete_error_title">Permission Denied!</string>
+<string name="delete_error_message">You cannot delete a trip that you do
+not own!</string>
+    <string name="post_error_title">Permission Denied!</string>
+<string name="post_error_message">You cannot modify a trip that you do not
+own!</string>
+
+    <!-- 3.1.3 menu items -->
+    <string name="action_settings">Settings</string>
+    <string name="action_post">Post</string>
+    <string name="action_delete">Delete</string>
+    <string name="action_logout">Logout</string>
+    <string name="action_refresh">Refresh</string>
+    <string name="action_new">New</string>
+    <string name="action_public_trips">Public Trips</string>
+    <string name="action_my_trips">My Trips</string>
 </resources>
